--- a/requirements.txt
+++ b/requirements.txt
@@ -34,14 +34,28 @@ typing_extensions==4.15.0
 
 # ---------- OpenAI / LLM ----------
 openai==2.14.0
+tiktoken==0.12.0
+langchain==1.2.3
+langchain-core==1.2.7
+langchain-community==0.4.1
+langchain-openai==1.1.7
+langchain-text-splitters==1.1.0
+langchain-classic==1.0.1
+langgraph==1.0.6
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.6
+langgraph-sdk==0.3.3
+langsmith==0.6.2
 perplexityai==0.22.2
 tqdm==4.67.1
+
 
 # ---------- Utils ----------
 python-dotenv==1.2.1
 python-multipart==0.0.20
 requests==2.25.1
 PyYAML>=6.0.1
+
 
 
 reportlab==4.4.7
